external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_untyped.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W10007]: issue with attribute value
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:1:9
  │
1 │ #[allow(ide_path_autocomplete,ide_dot_autocomplete)]
  │         ^^^^^^^^^^^^^^^^^^^^^ Unknown warning filter 'ide_path_autocomplete'

warning[W10007]: issue with attribute value
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:1:31
  │
1 │ #[allow(ide_path_autocomplete,ide_dot_autocomplete)]
  │                               ^^^^^^^^^^^^^^^^^^^^ Unknown warning filter 'ide_dot_autocomplete'

error[E03009]: unbound variable
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:4:16
  │
4 │         match (e) {
  │                ^ Unbound variable 'e'

error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:4:16
  │
4 │         match (e) {
  │                ^ Pattern '_' not covered

error[E03009]: unbound variable
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:9:16
  │
9 │         match (e) {
  │                ^ Unbound variable 'e'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:10:13
   │
10 │             E::Two(n) => n
   │             ^ Could not resolve the name 'E'

error[E03009]: unbound variable
   ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:10:26
   │
10 │             E::Two(n) => n
   │                          ^ Unbound variable 'n'
